# sem3lab5

./: CMakeLists.txt  README.md
05/: Ball.cpp  Ball.hpp  Color.h  Dust.cpp  Dust.h  Physics.cpp  Physics.h  Point.h  World.cpp  World.h  lib.cpp
05/data/: smile.txt
__MACOSX/05/black_box/: ._PainterImpl.cpp
